--- a/display/tuna-sde-display-cdp.dtsi
+++ b/display/tuna-sde-display-cdp.dtsi
@@ -5,6 +5,17 @@
 
 #include "tuna-sde-display.dtsi"
 
+&L3D {
+	qcom,init-voltage = <1090000>;
+};
+
+&dsi_panel_pwr_supply {
+	qcom,panel-supply-entry@1 {
+		qcom,supply-min-voltage = <1090000>;
+		qcom,supply-max-voltage = <1100000>;
+	};
+};
+
 &pm8550vs_d_gpios {
 	lcd_backlight_ctrl {
 		lcd_backlight_en_default: lcd_backlight_en_default {
