--- a/display/tuna-sde-display-mtp.dtsi
+++ b/display/tuna-sde-display-mtp.dtsi
@@ -1,9 +1,20 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2024-2025 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 #include "tuna-sde-display.dtsi"
+
+&L3D {
+	qcom,init-voltage = <1090000>;
+};
+
+&dsi_panel_pwr_supply {
+	qcom,panel-supply-entry@1 {
+		qcom,supply-min-voltage = <1090000>;
+		qcom,supply-max-voltage = <1100000>;
+	};
+};
 
 &dsi_nt37801_amoled_cmd {
 	qcom,panel-supply-entries = <&dsi_panel_pwr_supply>;
