ARM: dts: msm: Add initial device tree for QCS610 LE target
Added initial device tree for QCS610 LE target.

Change-Id: Ia8b8790fa0916a8a87a5bc696f5b9e23d7e951dc
Signed-off-by: Kunal Singh Ranawat <quic_kranawat@quicinc.com>

--- a/bindings/arm/msm/msm.yaml
+++ b/bindings/arm/msm/msm.yaml
@@ -205,4 +205,19 @@ properties:
               - qcom,wdp
           - const: qcom,monacop
 
+      - description: Qualcomm Technologies, Inc. QCS610
+        items:
+          - enum:
+              - qcom,qcs610-iot
+              - qcom,iot
+              - qcom,qcs610-ipc
+              - qcom,ipc
+              - qcom,qcs610-opk
+              - qcom,opk
+          - const: qcom,qcs610
+
+      - description: Qualcomm Technologies, Inc. SM6150
+        items:
+          - const: qcom,sm6150
+
 additionalProperties: true
