--- a/display/kera-sde-display-qrd.dtsi
+++ b/display/kera-sde-display-qrd.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2024-2025 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 #include "kera-sde-display.dtsi"
@@ -178,6 +178,10 @@
 	qcom,mdss-dsi-sec-bl-pmic-control-type = "bl_ctrl_dcs";
 	qcom,mdss-dsi-bl-min-level = <1>;
 	qcom,mdss-dsi-bl-max-level = <1023>;
+};
+
+&sde_dp {
+	qcom,dp-aux-switch = <&fsa4480>;
 };
 
 &sde_dsi {
