--- a/qcom/kera-reserved-memory.dtsi
+++ b/qcom/kera-reserved-memory.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2024-2025 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 &reserved_memory {
@@ -168,14 +168,9 @@
 		reg = <0x0 0x95f00000 0x0 0x800000>;
 	};
 
-	cvp_mem: cvp_region@96700000 {
+	soccp_mem: soccp_region@96700000 {
 		no-map;
-		reg = <0x0 0x96700000 0x0 0x700000>;
-	};
-
-	soccp_mem: soccp_region@96e00000 {
-		no-map;
-		reg = <0x0 0x96e00000 0x0 0x180000>;
+		reg = <0x0 0x96700000 0x0 0x180000>;
 	};
 
 	wpss_mem: wpss_region@97000000 {
@@ -185,22 +180,22 @@
 
 	cdsp_mem: cdsp_region@98900000 {
 		no-map;
-		reg = <0x0 0x98900000 0x0 0x1900000>;
+		reg = <0x0 0x98900000 0x0 0x1400000>;
 	};
 
-	q6_cdsp_dtb_mem: q6_cdsp_dtb_region@9a200000 {
+	q6_cdsp_dtb_mem: q6_cdsp_dtb_region@99d00000 {
 		no-map;
-		reg = <0x0 0x9a200000 0x0 0x80000>;
+		reg = <0x0 0x99d00000 0x0 0x80000>;
 	};
 
-	q6_adsp_dtb_mem: q6_adsp_dtb_region@9a280000 {
+	q6_adsp_dtb_mem: q6_adsp_dtb_region@99d80000 {
 		no-map;
-		reg = <0x0 0x9a280000 0x0 0x80000>;
+		reg = <0x0 0x99d80000 0x0 0x80000>;
 	};
 
-	adspslpi_mem: adspslpi_region@9a300000 {
+	adspslpi_mem: adspslpi_region@99e00000 {
 		no-map;
-		reg = <0x0 0x9a300000 0x0 0x3a80000>;
+		reg = <0x0 0x99e00000 0x0 0x2a00000>;
 	};
 
 	wlan_msa_mem: wlan_msa_region@a6400000 {
