--- a/qcom/tuna-pmic-overlay.dtsi
+++ b/qcom/tuna-pmic-overlay.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2024-2025, Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 #include <dt-bindings/gpio/gpio.h>
@@ -434,4 +434,8 @@
 &pmxr2230_tz {
 	io-channels = <&pmk8550_vadc PMXR2230_ADC5_GEN3_DIE_TEMP>;
 	io-channel-names = "thermal";
+};
+
+&battery_charger {
+	qcom,ship-mode-immediate;
 };
