--- a/qcom/tuna-oemvm.dtsi
+++ b/qcom/tuna-oemvm.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2024-2025 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 #include <dt-bindings/interrupt-controller/arm-gic.h>
@@ -8,7 +8,7 @@
 / {
 	#address-cells = <0x2>;
 	#size-cells = <0x2>;
-	qcom,msm-id = <655 0x10000>;
+	qcom,msm-id = <681 0x10000>, <655 0x10000>, <694 0x10000>;
 	interrupt-parent = <&vgic>;
 
 	chosen {
