bindings: interrupt-controller: Document PDC compatible for sm6150
Document PDC compatible for sm6150.

Change-Id: Id1cbe87f20263dfb03c4f7c47121ee7a5bb94d1e
Signed-off-by: Dhaval Radiya <quic_dradiya@quicinc.com>

--- a/bindings/interrupt-controller/qcom,pdc.yaml
+++ b/bindings/interrupt-controller/qcom,pdc.yaml
@@ -39,6 +39,7 @@ properties:
           - qcom,ravelin-pdc
           - qcom,tuna-pdc
           - qcom,kera-pdc
+          - qcom,sm6150-pdc
       - const: qcom,pdc
 
   reg:
