ARM: dts: msm: Add touch reset and interrupt gpio in sun-vm platforms
Add touch reset and interrupt gpio in sun-vm QRD, MTP and CDP
platforms.

Change-Id: Ic209d570f168a30de6f9a29cc6df3966d249b3aa
Signed-off-by: Anand Tarakh <quic_atarakh@quicinc.com>

--- a/qcom/sun-vm-qrd.dtsi
+++ b/qcom/sun-vm-qrd.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2024-2025 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 &soc {
 };
@@ -13,7 +13,9 @@
 	st_fts@0 {
 		compatible = "st,fts";
 		reg = <0x0>;
+		st,irq-gpio = <&tlmm 162 0x2008>;
 		st,irq-flags = <8>;
+		st,reset-gpio = <&tlmm 161 0x00>;
 		spi-max-frequency = <1000000>;
 
 		st,touch-type = "primary";
