--- a/qcom/sun-vm-cdp.dtsi
+++ b/qcom/sun-vm-cdp.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2023-2024 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2023-2025 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 &soc {
 };
@@ -12,7 +12,9 @@
 	st_fts@49 {
 		compatible = "st,fts";
 		reg = <0x49>;
+		st,irq-gpio = <&tlmm 162 0x2008>;
 		st,irq-flags = <8>;
+		st,reset-gpio = <&tlmm 161 0x00>;
 
 		st,touch-type = "primary";
 		st,qts_en;
