ARM: dts: msm: Add pinctrl string for SW_CTRL GPIO
Add pinctrl string for SW_CTRL GPIO.

Change-Id: I291c1c103ca0454b3616efb66b46c357494d19ae
CRs-Fixed: 4090490

--- a/kera-wcn7750.dtsi
+++ b/kera-wcn7750.dtsi
@@ -70,6 +70,7 @@
 		sw-ctrl-gpio = <81>;
 		/* List of GPIOs to be setup for interrupt wakeup capable */
 		mpm_wake_set_gpios = <81>;
+		pin_sw-ctrl-gpio = <&tlmm 81 0>;
 		pinctrl-names = "sw_ctrl";
 		pinctrl-0 = <&icnss_sw_ctrl>;
 
