ARM: dts: msm: Add touch reset and interrupt gpio in tuna-vm platforms
Add touch reset and interrupt gpio in tuna-vm QRD, MTP, RCM and CDP
platform.

Change-Id: I0e87a8d72a32b1c2fd4599b6cde04df1ecd0f854
Signed-off-by: Anand Tarakh <quic_atarakh@quicinc.com>

--- a/qcom/tuna-vm-qrd.dtsi
+++ b/qcom/tuna-vm-qrd.dtsi
@@ -13,6 +13,9 @@
 	st_fts@0 {
 		compatible = "st,fts";
 		reg = <0x0>;
+		st,irq-gpio = <&tlmm 176 0x2008>;
+		st,irq-flags = <8>;
+		st,reset-gpio = <&tlmm 189 0x00>;
 
 		st,touch-type = "primary";
 		st,qts_en;
