--- a/qcom/tuna-vm-rcm.dtsi
+++ b/qcom/tuna-vm-rcm.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: BSD-3-Clause
 /*
- * Copyright (c) 2024 Qualcomm Innovation Center, Inc. All rights reserved.
+ * Copyright (c) 2024-2025 Qualcomm Innovation Center, Inc. All rights reserved.
  */
 
 &soc {
@@ -13,7 +13,9 @@
 	st_fts@49 {
 		compatible = "st,fts";
 		reg = <0x49>;
+		st,irq-gpio = <&tlmm 176 0x2008>;
 		st,irq-flags = <8>;
+		st,reset-gpio = <&tlmm 189 0x00>;
 
 		st,touch-type = "primary";
 		st,qts_en;
