qcom: Build dtbos inline
Signed-off-by: tanz3 <tanz47374@gmail.com>

--- a/qcom/Makefile
+++ b/qcom/Makefile
@@ -360,4 +360,5 @@ endif
 
 always-y        := $(dtb-y)
 subdir-y        := $(dts-dirs)
+subdir-y        += audio bt camera data display dsp eSE eva fingerprint graphics mm mmrm nfc synx video wlan
 clean-files     := *.dtb *.dtbo
