--- a/qcom/sun-regulators.dtsi
+++ b/qcom/sun-regulators.dtsi
@@ -483,7 +483,7 @@
 			regulator-name = "pm_humu_l9";
 			qcom,set = <RPMH_REGULATOR_SET_ALL>;
 			regulator-min-microvolt = <2960000>;
-			regulator-max-microvolt = <3008000>;
+			regulator-max-microvolt = <3300000>;
 			qcom,init-voltage = <2960000>;
 			qcom,init-mode = <RPMH_REGULATOR_MODE_HPM>;
 		};
@@ -546,7 +546,6 @@
 			regulator-max-microvolt = <1800000>;
 			qcom,init-voltage = <1800000>;
 			qcom,init-mode = <RPMH_REGULATOR_MODE_HPM>;
-			qcom,proxy-consumer-enable;
 		};
 	};
 
@@ -650,6 +649,12 @@
 	rpmh-regulator-bobb1 {
 		compatible = "qcom,rpmh-vrm-regulator";
 		qcom,resource-name = "bobb1";
+		qcom,regulator-type = "pmic5-bob";
+		qcom,supported-modes =
+			<RPMH_REGULATOR_MODE_PASS
+			RPMH_REGULATOR_MODE_AUTO
+			RPMH_REGULATOR_MODE_HPM>;
+		qcom,mode-threshold-currents = <0 1000000 2000000>;
 
 		BOB1: pm_humu_bob1: regulator-pm-humu-bob1 {
 			regulator-name = "pm_humu_bob1";
@@ -657,12 +662,19 @@
 			regulator-min-microvolt = <3008000>;
 			regulator-max-microvolt = <4000000>;
 			qcom,init-voltage = <3296000>;
+			qcom,init-mode = <RPMH_REGULATOR_MODE_PASS>;
 		};
 	};
 
 	rpmh-regulator-bobb2 {
 		compatible = "qcom,rpmh-vrm-regulator";
 		qcom,resource-name = "bobb2";
+		qcom,regulator-type = "pmic5-bob";
+		qcom,supported-modes =
+			<RPMH_REGULATOR_MODE_PASS
+			RPMH_REGULATOR_MODE_AUTO
+			RPMH_REGULATOR_MODE_HPM>;
+		qcom,mode-threshold-currents = <0 1000000 2000000>;
 
 		BOB2: pm_humu_bob2: regulator-pm-humu-bob2 {
 			regulator-name = "pm_humu_bob2";
@@ -670,6 +682,7 @@
 			regulator-min-microvolt = <2704000>;
 			regulator-max-microvolt = <3008000>;
 			qcom,init-voltage = <2720000>;
+			qcom,init-mode = <RPMH_REGULATOR_MODE_PASS>;
 		};
 	};
 
@@ -930,7 +943,6 @@
 			<RPMH_REGULATOR_MODE_LPM
 			 RPMH_REGULATOR_MODE_HPM>;
 		qcom,mode-threshold-currents = <0 30000>;
-
 		L2G: pm_v8g_l2: regulator-pm-v8g-l2 {
 			regulator-name = "pm_v8g_l2";
 			qcom,set = <RPMH_REGULATOR_SET_ALL>;
