--- a/qcom/sun-usb.dtsi
+++ b/qcom/sun-usb.dtsi
@@ -85,6 +85,8 @@
 			snps,dis-u2-entry-quirk;
 			snps,dis_u2_susphy_quirk;
 			snps,ssp-u3-u0-quirk;
+			snps,usb2-lpm-disable;
+			snps,usb2-gadget-lpm-disable;
 			tx-fifo-resize;
 			num-hc-interrupters = /bits/ 16 <3>;
 			dr_mode = "otg";
