--- a/qcom/sun.dtsi
+++ b/qcom/sun.dtsi
@@ -41,7 +41,7 @@
 	};
 
 	chosen: chosen {
-		bootargs = "log_buf_len=512K loglevel=6 cpufreq.default_governor=performance sysctl.kernel.sched_pelt_multiplier=4 no-steal-acc kpti=0 swiotlb=0 loop.max_part=7 irqaffinity=0-1 pcie_ports=compat printk.console_no_auto_verbose=1 kasan=off rcupdate.rcu_expedited=1 rcu_nocbs=0-7 kernel.panic_on_rcu_stall=1 disable_dma32=on cgroup_disable=pressure fw_devlink.strict=1 can.stats_timer=0 pci-msm-drv.pcie_sm_regs=0x1D07000,0x1040,0x1048,0x3000,0x1 ftrace_dump_on_oops slub_debug=-";
+		bootargs = "cpufreq.default_governor=performance sysctl.kernel.sched_pelt_multiplier=4 no-steal-acc kpti=0 swiotlb=0 loop.max_part=7 irqaffinity=0-1 pcie_ports=compat printk.console_no_auto_verbose=0 kasan=off rcupdate.rcu_expedited=1 rcu_nocbs=0-7 kernel.panic_on_rcu_stall=1 disable_dma32=on cgroup_disable=pressure fw_devlink.strict=1 can.stats_timer=0 pci-msm-drv.pcie_sm_regs=0x1D07000,0x1040,0x1048,0x3000,0x1 ftrace_dump_on_oops slub_debug=-";
 		stdout-path = "serial0:115200n8";
 	};
 
@@ -414,6 +414,12 @@
 		reg = <0xb360000 0x10000>;
 	};
 
+	adsp_sleepmon: adsp-sleepmon {
+		compatible = "qcom,adsp-sleepmon";
+		qcom,wait_time_lpm = <45>;
+		qcom,wait_time_lpi = <45>;
+	};
+
 	aoss_qmp: power-controller@c300000 {
 		compatible = "qcom,aoss-qmp";
 		reg = <0xc300000 0x400>;
@@ -759,7 +765,7 @@
 		interrupt-controller;
 		#interrupt-cells = <2>;
 		wakeup-parent = <&pdc>;
-		qcom,gpios-reserved = <36 37 38 39 74>;
+		qcom,gpios-reserved = <36 37 38 39 74 48 49 50 51>;
 	};
 
 	tlmm-vm-mem-access {
@@ -768,19 +774,21 @@
 		tuivm {
 			qcom,label = <0x08>;
 			qcom,vmid = <45>;
-			tlmm-vm-gpio-list = <&tlmm 86 0 &tlmm 87 0 &tlmm 98 0 &tlmm 97 0 &tlmm 48 0 &tlmm 49 0
-					&tlmm 50 0 &tlmm 51 0 &tlmm 161 0 &tlmm 162 0 &tlmm 100 0
-					 &tlmm 28 0 &tlmm 29 0 &tlmm 30 0 &tlmm 31 0 &tlmm 88 0>;
+			tlmm-vm-gpio-list = <&tlmm 32 0 &tlmm 33 0 &tlmm 34 0 &tlmm 35 0
+									&tlmm 40 0 &tlmm 41 0 &tlmm 42 0 &tlmm 43 0
+										&tlmm 86 0 &tlmm 87 0 &tlmm 98 0 &tlmm 100 0
+											&tlmm 161 0 &tlmm 162 0>;
 		};
 	};
 
 	tlmm-vm-test {
 		compatible = "qcom,tlmm-vm-test";
 		qcom,master;
-		tlmm-vm-gpio-list = <&tlmm 86 0 &tlmm 87 0 &tlmm 98 0 &tlmm 97 0 &tlmm 48 0 &tlmm 49 0
-					&tlmm 50 0 &tlmm 51 0 &tlmm 161 0 &tlmm 162 0 &tlmm 100 0
-					 &tlmm 28 0 &tlmm 29 0 &tlmm 30 0 &tlmm 31 0 &tlmm 88 0>;
-	};
+		tlmm-vm-gpio-list = <&tlmm 32 0 &tlmm 33 0 &tlmm 34 0 &tlmm 35 0
+								&tlmm 40 0 &tlmm 41 0 &tlmm 42 0 &tlmm 43 0
+									&tlmm 86 0 &tlmm 87 0 &tlmm 98 0 &tlmm 100 0
+										&tlmm 161 0 &tlmm 162 0>;
+};
 
 	slimbam: bamdma@6C04000 {
 		compatible = "qcom,bam-v1.7.0";
@@ -929,6 +937,7 @@
 			/* Need to update different value for V2 device */
 			qcom,freq-threshold-idx = <11>, <10>;
 			qcom,frequency-threshold-residency = <5000>, <5000>;
+			heuristics_scid_thread_interval = <16000>;
 			qcom,scid-heuristics-enabled;
 		};
 	};
@@ -2206,11 +2215,8 @@
 		status = "ok";
 	};
 
-	qcom_ramoops {
-		compatible = "qcom,ramoops";
-		memory-region = <&ramoops_mem>;
-		pmsg-size = <0x200000>;
-		mem-type = <2>;
+	logbuf: qcom,logbuf-vendor-hooks {
+		compatible = "qcom,logbuf-vendor-hooks";
 	};
 
 	qcom,mpm2-sleep-counter@c221000 {
@@ -2320,7 +2326,7 @@
 		qcom,firmware-name = "oemvm";
 		qcom,keep-running;
 		memory-region = <&oem_vm_mem &vm_comm_mem>;
-		virtio-backends = <&oem_vm_virt_be0 &oem_vm_virt_be1>;
+		//virtio-backends = <&oem_vm_virt_be0 &oem_vm_virt_be1>;
 	};
 
 	ufsphy_mem: ufsphy_mem@1d80000 {
@@ -3005,6 +3011,12 @@
 
 		battery_charger: qcom,battery_charger {
 			compatible = "qcom,battery-charger";
+			status = "disabled";
+		};
+
+		mca_adsp_glink: mca,adsp_glink {
+			compatible = "mca,adsp_glink";
+			status = "disabled";
 		};
 
 		ucsi: qcom,ucsi {
@@ -3354,7 +3366,11 @@
 			< 0x0008 0xFF 0x02 0x02 >,
 			< 0x0011 0xFF 0x01 0x00 >,
 			< 0x0017 0xFF 0xFF 0x04 >,
-			< 0x1000 0xFF 0xFF 0x08 >;
+			< 0x0024 0xFF 0x03 0x03 >,
+			< 0x1000 0xFF 0xFF 0x08 >,
+                        // MIUI ADD: Camera_CamSched
+			< 0x4005 0xFF 0x03 0x03 >;
+                        // END Camera_CamSched
 	};
 
 	ddr_freq_table: ddr-freq-table {
@@ -3667,14 +3683,16 @@
 					<&soccp_smp2p_in 1 0>,
 					<&soccp_smp2p_in 3 0>,
 					<&soccp_smp2p_in 2 0>,
-					<&soccp_smp2p_in 9 0>;
+					<&soccp_smp2p_in 9 0>,
+					<&soccp_smp2p_in 10 0>;
 
 		interrupt-names = "wdog",
 				"fatal",
 				"ready",
 				"stop-ack",
 				"handover",
-				"pong";
+				"pong",
+				"wake-ack";
 
 		/* Outputs to soccp */
 		qcom,smem-states = <&soccp_smp2p_out 0>, <&soccp_smp2p_out 10>, <&soccp_smp2p_out 9>;
@@ -3774,6 +3792,11 @@
 	aop_tme_uefi_merged_mem: aop_tme_uefi_merged_region@81c80000 {
 		no-map;
 		reg = <0x0 0x81c80000 0x0 0x74000>;
+	};
+
+	dump_display_mem: dump_display_region@81cf4000 {
+		no-map;
+		reg = <0x0 0x81cf4000 0x0 0x800>;
 	};
 
 	/* secdata region can be reused by apps */
@@ -3937,7 +3960,7 @@
 
 	adspslpi_mem: adspslpi_region@9ee00000 {
 		no-map;
-		reg = <0x0 0x9ee00000 0x0 0x3a80000>;
+		reg = <0x0 0x9ee00000 0x0 0x4580000>;
 	};
 
 	/* uefi region can be reused by apps */
@@ -3946,7 +3969,7 @@
 
 	xbl_ramdump_mem: xbl_ramdump_region@b8000000 {
 		no-map;
-		reg = <0x0 0xb8000000 0x0 0x1c0000>;
+		reg = <0x0 0xb8000000 0x0 0x200000>;
 	};
 
 	hwfence_shbuf: hwfence-shmem {
@@ -3968,15 +3991,16 @@
 
 	trust_ui_vm_mem: trust_ui_vm_region@f3800000 {
 		compatible = "shared-dma-pool";
-		reg = <0x0 0xf3800000 0x0 0x4400000>;
+		reg = <0x0 0xf3800000 0x0 0x5000000>;
 		reusable;
 		alignment = <0x0 0x400000>;
 	};
 
-	oem_vm_mem: oem_vm_region@f7c00000 {
-		compatible = "shared-dma-pool";
-		reg = <0x0 0xf7c00000 0x0 0x4c00000>;
-		reusable;
+	oem_vm_mem: oem_vm_region@f8800000 {
+	//	compatible = "shared-dma-pool";
+	//	reg = <0x0 0xf8800000 0x0 0x4c00000>;
+	//	reusable;
+		no-map;
 		alignment = <0x0 0x400000>;
 	};
 
@@ -4031,7 +4055,7 @@
 		compatible = "shared-dma-pool";
 		reusable;
 		alloc-ranges = <0x0 0x00000000 0x0 0xffffffff>;
-		size = <0x0 0xc800000>;
+		size = <0x0 0xfc00000>;
 		alignment = <0x0 0x400000>;
 	};
 
@@ -4049,9 +4073,10 @@
 	};
 
 	ramoops_mem: ramoops-region {
-		alloc-ranges = <0x1 0x00000000 0xfffffffe 0xffffffff>;
-		size = <0x0 0x200000>;
-		no-map;
+		compatible = "ramoops";
+		reg = <0x0 0xa3500000 0x0 0x400000>;
+		console-size = <0x200000>;
+		pmsg-size = <0x200000>;
 	};
 
 	qmc_dma_mem: qmc_dma_region {
@@ -4094,6 +4119,7 @@
 		compatible = "qcom,wcd939x-i2c";
 		reg = <0xe>;
 		vdd-usb-cp-supply = <&L15B>;
+		wcd-usb-sbu-compliance;
 	};
 };
 
