qcom: display: Import xiaomi devicetree changes
Signed-off-by: tanz3 <tanz47374@gmail.com>

--- a/qcom/display/Kbuild
+++ b/qcom/display/Kbuild
@@ -23,7 +23,11 @@ dtbo-$(CONFIG_ARCH_SUN) += display/sun-sde.dtbo \
 		display/sun-sde-display-mtp-qmp1000-overlay.dtbo \
 		display/sun-sde-display-mtp-qmp1000-v8-overlay.dtbo \
 		display/sun-sde-display-hdk-overlay.dtbo \
-		display/sun-sde-display-cdp-no-display-overlay.dtbo
+		display/sun-sde-display-cdp-no-display-overlay.dtbo \
+		display/haotian-sde-display-mtp-overlay.dtbo \
+		display/miro-sde-display-mtp-overlay.dtbo \
+		display/dada-sde-display-mtp-overlay.dtbo \
+		display/nirvana-sde-display-mtp-overlay.dtbo
 else
 dtbo-$(CONFIG_ARCH_SUN) += display/trustedvm-sun-sde-display-cdp-overlay.dtbo \
 		display/trustedvm-sun-sde-display-mtp-overlay.dtbo \
